# md-rust-iter-3

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
blog-cli/: Cargo.toml  README.md
blog-cli/src/: main.rs
blog-client/: Cargo.toml  README.md
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  types.rs
blog-client/tests/: grpc_client.rs  http_client.rs
blog-dto/: Cargo.toml  README.md
blog-dto/src/: lib.rs
blog-proto/: Cargo.toml  README.md  build.rs
blog-proto/proto/: blog.proto
blog-proto/src/: lib.rs
blog-server/: .gitignore  Cargo.toml  README.md  docker-compose.yml
blog-server/.sqlx/: query-74bf845a65e1ac62f25876eaebf7f0ecea4214222545d7fed5d93ed830bdd9d7.json
blog-server/migrations/: 20260626232340_create_users.sql  20260626232357_create_posts.sql
blog-server/src/: lib.rs  main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: in_memory.rs  mod.rs  pg_repository.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: base.rs  error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: dto.rs  grpc_service.rs  http_handlers.rs  middleware.rs  mod.rs
blog-server/src/presentation/handler/: auth.rs  post.rs
blog-server/src/tests/: auth_tests.rs  blog_tests.rs  in_memory.rs  mod.rs
blog-wasm/: Cargo.toml  README.md  index.html  style.css
blog-wasm/src/: api.rs  auth.rs  main.rs  posts.rs  storage.rs
