[workspace]
members = ["blog-proto", "blog-server", "blog-client", "blog-cli", "blog-wasm"]
resolver = "3"

[workspace.dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1"
