[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-proto = { path = "../blog-proto" }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }