[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-proto = { path = "../blog-proto" }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror =  "2"
anyhow = "1"
sqlx = { version = "0.9", features = ["json", "uuid", "chrono", "postgres"] }
actix-web = "4"
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }