[package]
name = "blog_server"
version = "0.1.0"
edition = "2024"

[dependencies]
blog-proto = { path = "../blog-proto" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
sqlx = { version = "0.9", features = ["json", "uuid", "chrono", "postgres", "runtime-tokio"] }
actix-web = "4"
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
futures-util = "0.3"
async-trait = "0.1"
jsonwebtoken = { version = "10", features = ["use_pem", "ed25519-dalek", "rust_crypto"] }
argon2 = { version = "0.5", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = { version = "0.14" }
actix-cors = "0.7"